# ChangeLog for media-gfx/xv
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/xv/ChangeLog,v 1.60 2005/05/16 15:29:54 killerfox Exp $

  16 May 2005; Rene Nussbaumer <killerfox@gentoo.org> xv-3.10a-r10.ebuild:
  Stable on hppa; bug #83686

  16 May 2005; Rene Nussbaumer <killerfox@gentoo.org> xv-3.10a-r12.ebuild:
  Added ~hppa

*xv-3.10a-r12 (05 May 2005)

  05 May 2005; Tavis Ormandy <taviso@gentoo.org> +xv-3.10a-r12.ebuild:
  new release of patchset.

  19 Apr 2005; Bryan Østergaard <kloeri@gentoo.org> xv-3.10a-r11.ebuild:
  Stable on ia64, bug 88742.

  18 Apr 2005; Bryan Østergaard <kloeri@gentoo.org> xv-3.10a-r11.ebuild:
  Stable on alpha, bug 88742.

  16 Apr 2005; Markus Rothe <corsair@gentoo.org> xv-3.10a-r11.ebuild:
  Stable on ppc64; bug #88742

  15 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> xv-3.10a-r11.ebuild:
  Stable on ppc.

  15 Apr 2005; Gustavo Zacarias <gustavoz@gentoo.org> xv-3.10a-r11.ebuild:
  Keyworded sparc wrt #88742

  15 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> xv-3.10a-r11.ebuild:
  stable on amd64 wrt security bug #88742

*xv-3.10a-r11 (15 Apr 2005)

  15 Apr 2005; Tavis Ormandy <taviso@gentoo.org>
  +files/xv-3.10a-bmpfix.patch.bz2, +files/xv-3.10a-yaos.dif.bz2,
  +xv-3.10a-r11.ebuild:
  switching to the jumbo patch format, includes security fixes.

  13 Mar 2005; Hardave Riar <hardave@gentoo.org> xv-3.10a-r10.ebuild:
  Stable on mips, bug #83686.

  03 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> xv-3.10a-r10.ebuild:
  Stable on alpha, bug 83686.

  02 Mar 2005; Michael Hanselmann <hansmi@gentoo.org> xv-3.10a-r10.ebuild:
  Stable on ppc.

  02 Mar 2005; Markus Rothe <corsair@gentoo.org> xv-3.10a-r10.ebuild:
  Stable on ppc64; bug #83686

  02 Mar 2005; Ferris McCormick <fmccor@gentoo.org> xv-3.10a-r10.ebuild:
  Stable for sparc, closing filename issue Bug 83686.
